# docs/swagger.json
@@ -543,20 +543,43 @@
                 "coin": {
                     "type": "number"
                 },
-                "createdAt": {
-                    "type": "string"
-                },
                 "description": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "refillType": {
                     "type": "string"
                 },
                 "userID": {
                     "type": "integer"
+                }
+            }
+        },
+        "entities.UserWinning": {
+            "type": "object",
+            "properties": {
+                "delivered": {
+                    "type": "boolean"
+                },
+                "deliveredAt": {
+                    "type": "string"
+                },
+                "deliveredBy": {
+                    "type": "integer"
+                },
+                "productID": {
+                    "type": "integer"
+                },
+                "userID": {
+                    "type": "integer"
+                },
+                "userWinningID": {
+                    "type": "integer"
+                },
+                "winType": {
+                    "type": "string"
+                },
+                "wonAt": {
+                    "type": "string"
                 }
             }
         },
@@ -726,6 +749,12 @@
                 "birth_date": {
                     "type": "string"
                 },
+                "buys": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/usecase.UserWinnings"
+                    }
+                },
                 "coin": {
                     "type": "number"
                 },
@@ -752,6 +781,17 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "usecase.UserWinnings": {
+            "type": "object",
+            "properties": {
+                "buy": {
+                    "$ref": "#/definitions/entities.UserWinning"
+                },
+                "product": {
+                    "$ref": "#/definitions/entities.Product"
                 }
             }
         },
